update swag doc for healthcheck endpoint
